overflow fixed

--- a/app/sass/rating-menu.sass
+++ b/app/sass/rating-menu.sass
@@ -3,6 +3,7 @@
     &-grayBlock
         height: 60px
         max-height: 60px
+        z-index: 1
         background-color: #8F9399
         margin: 0 auto
         @media #{$breakpoint-lg-only} 
@@ -16,6 +17,12 @@
             font-family: "Tele2DisplaySerifBoldShortWeb"
             font-size: 22px
             color: #fff
+
+            width: 90px
+            max-width: 90px
+            min-width: 90px
+            max-height: 60px
+            overflow: hidden
             line-height: 60px
             @media #{$breakpoint-xs-only}
                 font-size: 16px
@@ -25,6 +32,7 @@
         height: 60px
         max-height: 60px
         overflow: hidden
+        z-index: 2
         @media #{$breakpoint-xs-only}
             height: 49px
         margin: 0 auto
